descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.


----------------------------------------------------------------------
--- 2009-03-XX  Release 7.14.4                                     ---
----------------------------------------------------------------------

* added -Ap plot visualization option to mged gqa command - Bob Parker
* added new 'gqa' quantitative analysis command to mged - Bob Parker
* fixed mged view initialization bugs - Bob Parker
* integer values in mged without floating point noise - Sean Morrison
* fixed source distribution compile/install path error - Sean Morrison
* fixed mged switch error running the Primitive Editor - Sean Morrison
* fixed g_diff crash when comparing objects - Sean Morrison
* improved g_qa usage message and missing density message - Bob Parker
* fixed mged font preferences menu when ".mgedrc" present - Bob Parker
* fixed oed docs bug noting lhs/rhs must be displayed - John Anderson
* added the nmg_fix_normals command to mged - Erik Greenwald
* upgrade libpng to 1.2.35 (Security fix) - Erik Greenwald


----------------------------------------------------------------------
--- 2009-02-06  Release 7.14.2                                     ---
----------------------------------------------------------------------

This release includes a number of new tools and enhancements that
facilitate geometry import and export including a new 'bot_dump' tool
for extracting mesh models without evaluating them for solidity, a new
'dem-g' converter for importing Digital Elevation Model (DEM) data,
a new 'lens' tool for creating accurate optical lenses, and the dxf-g
importer receives a bug fix when importing 2D entities.

* fixed errors in handling of hyp primitive translations - Cliff Yapp
* g_diff now guesses if a change was evolutionary - Erik Greenwald
* added >, <, >= and <= attr value comparisons in search - Cliff Yapp